src/css/custom.css
/* Any styles you write here will be included in the rendered document */

h4,
h5,
h6 {
  orphans: 3;
  widows: 3;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  page-break-after: avoid;
}

p,
img {
  page-break-before: avoid;
}

table {
  width: 100%;
  font-size: 12px;
}

/* Reduce space taken by unordered list bullets in tables */
table td ul {
  padding-inline-start: 30px;
}

/* Remove buttom margin from base CSS when lists are empty (useful for table of contents) */
ol:empty,
ul:empty {
  margin-bottom: 0;
}

.team-member-container {
  display: flex;
}

.team-member-container .team-member-img-container {
  margin-right: 1rem;
  min-width: 20%;
}

.team-member-container img {
  width: 100%;
  aspect-ratio: 1 / 1;
}

.table-separator {
  display: none;
}

.references p {
  padding-left: 2rem;
  text-indent: -2rem;
}

.cover-title {
  text-align: center;
  font-weight: bold;
}

.cover-semester {
  text-align: center;
  font-weight: bold;
  margin-top: 3rem;
}

.logo-upc {
  text-align: center;
}

.logo-upc > img {
  width: 25%;
}

